adding RAL paper ICM

--- a/pubs.html
+++ b/pubs.html
@@ -39,7 +39,7 @@
     </style>
     <a name="top"></a>
     <div class="container">
-      <h1 class="header">Lei Li's Publications</h1>
+      <h1 class="header"><a href="index.html">Lei Li</a>'s Publications</h1>
       <div class="searchbar row">
         <div style="float:left;"> <button type="button" class="btn btn-default"
             onclick="reset()">Reset</button>
@@ -62,12 +62,11 @@
 							bibtex_search" style="border: 1px solid lightgrey;">
             <option value="">Search Topic</option>
             <!-- Add topic values here -->
-            <option value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization">Natural Language Generation</option>
-            <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC">Probabilistic
-              Modelling</option>
-            <option value="machine translation|multilingual translation|NMT|SMT">Machine Translation</option>
-            <option value="question answering|machine reading comprehension">Question
-              Answering</option>
+            <option value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning|summarization|bidword generation">Natural Language Generation</option>
+            <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC">Probabilistic Modelling</option>
+            <option value="machine translation|multilingual translation|NMT|SMT|speech translation|speech-to-text translation|speech-to-speech translation">Machine Translation</option>
+            <option value="question answering|machine reading comprehension">Question Answering</option>
+            <option value="information extraction|relation extraction|entity extraction|taxonomy completion">Information Extraction</option>
             <option value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">Time Series Analysis</option>
             <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|image captioning|video captioning">Visual Understanding</option>
           </select>
